[package]
name = "last"
version = "0.1.0"
edition = "2021"
description = "LAST - The last package manager you'll ever need."
license = "MIT"

[[bin]]
name = "last"
path = "src/main.rs"

[dependencies]
clap       = { version = "4", features = ["derive"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
rhai       = { version = "1", features = ["serde"] }
reqwest    = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
zip        = "2"
sevenz-rust = "0.6"
flate2     = "1"
tar        = "0.4"
sha2       = "0.10"
sha1       = "0.10"
md-5       = "0.10"
which      = "6"
junction   = "1"
walkdir    = "2"
anyhow     = "1"
thiserror  = "1"
chrono     = { version = "0.4", features = ["clock"] }
dirs       = "5"

[profile.release]
opt-level = "z"
lto = true
strip = true
